@@ -83,6 +83,8 @@ sp56/Makefile
 sp57/Makefile
 sp58/Makefile
 sp59/Makefile
+sp60/Makefile
+sp61/Makefile
 spchain/Makefile
 spfatal01/Makefile
 spfatal02/Makefile
