@@ -1,0 +1,25 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  sp60
+
+directives:
+
+  rtems_rate_monotonic_create
+  rtems_rate_monotonic_period
+
+concepts:
+
++ Ensure that when a task is blocked on one period while another period
+  expires which is associated with the same task, that the task remains
+  blocked.
