@@ -1,0 +1,5 @@
+*** TEST 61 ***
+Init - Set current System State to Shutdown
+Init - rtems_shutdown_executive when already shutdown
+Init - restore System State and shutdown for real
+*** END OF TEST 61 ***
